Day26-Network_Policy-lab/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels: 
    app: backend
spec:
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
       - name: nginx
         image: nginx
         ports:
         - containerPort: 80
  replicas: 1
  selector:
    matchLabels:
      app: backend
  
---
apiVersion: v1 
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  type: NodePort
  ports:
  - targetPort: 80
    port: 80
    nodePort: 30008
